--- a/SocketTest_walkieTalkie/SocketTest_walkieTalkie/Base.lproj/Main.storyboard
+++ b/SocketTest_walkieTalkie/SocketTest_walkieTalkie/Base.lproj/Main.storyboard
@@ -659,17 +659,17 @@
                                         <rect key="frame" x="0.0" y="-65" width="375" height="668"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="THR-Kv-OXC" userLabel="ChannelMember Container View">
-                                        <rect key="frame" x="20" y="0.0" width="335" height="160"/>
+                                        <rect key="frame" x="20" y="0.0" width="335" height="80"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="keM-Rr-L0v">
-                                                <rect key="frame" x="0.0" y="0.0" width="335" height="160"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="335" height="80"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Membar's-list-Bg" translatesAutoresizingMaskIntoConstraints="NO" id="FT3-Ba-kHz">
-                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="160"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="80"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     </imageView>
                                                     <tableView clipsSubviews="YES" tag="102" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="29" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="frb-Dg-63V">
-                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="158"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="78"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <prototypes>
                                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="chatmemberCellID" rowHeight="29" id="Mwm-u5-bMW" customClass="channelMemberActivityTableViewCell">
@@ -760,17 +760,17 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="keM-Rr-L0v" secondAttribute="trailing" id="6Np-zq-oMV"/>
-                                            <constraint firstAttribute="height" constant="160" id="AD4-ie-Ufu"/>
+                                            <constraint firstAttribute="height" constant="80" id="AD4-ie-Ufu"/>
                                             <constraint firstItem="keM-Rr-L0v" firstAttribute="leading" secondItem="THR-Kv-OXC" secondAttribute="leading" id="fm3-qe-axa"/>
                                             <constraint firstAttribute="bottom" secondItem="keM-Rr-L0v" secondAttribute="bottom" id="gmF-6Q-c2Q"/>
                                             <constraint firstItem="keM-Rr-L0v" firstAttribute="top" secondItem="THR-Kv-OXC" secondAttribute="top" id="hjG-0b-b7J"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UjG-GC-0wV" userLabel="ChatTable Container View">
-                                        <rect key="frame" x="20" y="170" width="335" height="325"/>
+                                        <rect key="frame" x="20" y="90" width="335" height="405"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" tag="101" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hid-wM-1v0">
-                                                <rect key="frame" x="0.0" y="0.0" width="335" height="325"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="335" height="405"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MessageCellID" id="6o5-KL-YIk" userLabel="Message Cell">
@@ -1063,6 +1063,7 @@
                                                 </constraints>
                                                 <connections>
                                                     <action selector="tappedOnFileBtn:" destination="SSg-4l-UjN" eventType="touchUpInside" id="Saz-MG-unK"/>
+                                                    <segue destination="eLw-fY-gPP" kind="show" identifier="FileExplorerSegue" id="GIr-fP-jjh"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kCe-QR-9kj" userLabel="photo View">
@@ -1183,6 +1184,7 @@
                         <outlet property="popupFileView" destination="PEf-Es-kQB" id="46f-6k-tD1"/>
                         <outlet property="recordPauseButton" destination="Et7-fn-rNE" id="wEa-GM-o5V"/>
                         <outlet property="sendButton" destination="aNh-Y9-OZN" id="Ph1-Lv-sTg"/>
+                        <outlet property="textSendBtn" destination="g1E-fI-jdn" id="2r1-7m-tR4"/>
                         <outlet property="voiceMailView" destination="IAo-fc-rIm" id="SUh-TK-Kvz"/>
                         <outlet property="voiceStreamerButton" destination="adJ-RL-SWQ" id="Pcl-mf-ihI"/>
                     </connections>
@@ -1209,6 +1211,67 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eIP-ZB-KnF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="148.5" y="2031.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ezg-N9-kg3">
+            <objects>
+                <viewController id="eLw-fY-gPP" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KYS-hI-5mo"/>
+                        <viewControllerLayoutGuide type="bottom" id="NVB-BK-1Kq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AdM-aP-IeZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="FSj-kO-R8S">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YMC-3g-yJL">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.048195043100000001" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="hh9-Et-ajc" style="IBUITableViewCellStyleDefault" id="hbz-Wm-jxz">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hbz-Wm-jxz" id="s3Q-qS-8fj">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hh9-Et-ajc">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="FSj-kO-R8S" secondAttribute="trailing" id="4Ut-gZ-z7P"/>
+                            <constraint firstItem="YMC-3g-yJL" firstAttribute="leading" secondItem="AdM-aP-IeZ" secondAttribute="leading" id="8iT-F7-N1E"/>
+                            <constraint firstItem="NVB-BK-1Kq" firstAttribute="top" secondItem="FSj-kO-R8S" secondAttribute="bottom" id="P8W-1Z-cjH"/>
+                            <constraint firstItem="FSj-kO-R8S" firstAttribute="top" secondItem="AdM-aP-IeZ" secondAttribute="top" id="P9A-uW-bHd"/>
+                            <constraint firstItem="FSj-kO-R8S" firstAttribute="leading" secondItem="AdM-aP-IeZ" secondAttribute="leading" id="ViK-mn-JfZ"/>
+                            <constraint firstAttribute="trailing" secondItem="YMC-3g-yJL" secondAttribute="trailing" id="a1m-mK-dZI"/>
+                            <constraint firstItem="NVB-BK-1Kq" firstAttribute="top" secondItem="YMC-3g-yJL" secondAttribute="bottom" id="c2C-8T-FWz"/>
+                            <constraint firstItem="YMC-3g-yJL" firstAttribute="top" secondItem="KYS-hI-5mo" secondAttribute="bottom" constant="44" id="zsg-eJ-6Uh"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="tableView" destination="YMC-3g-yJL" id="jrZ-eF-tbp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Fw-oN-xPd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2243.5" y="2727.5"/>
         </scene>
     </scenes>
     <resources>
