checking existing channel when creating, send duplicate channel message. some UI changed.

--- a/SocketTest_walkieTalkie/SocketTest_walkieTalkie/Base.lproj/Main.storyboard
+++ b/SocketTest_walkieTalkie/SocketTest_walkieTalkie/Base.lproj/Main.storyboard
@@ -1232,7 +1232,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.048195043100000001" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="hh9-Et-ajc" style="IBUITableViewCellStyleDefault" id="hbz-Wm-jxz">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FileCellID" textLabel="hh9-Et-ajc" style="IBUITableViewCellStyleDefault" id="hbz-Wm-jxz">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hbz-Wm-jxz" id="s3Q-qS-8fj">
@@ -1306,6 +1306,6 @@
         <image name="text input filde" width="634" height="105"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Wrb-nA-BGT"/>
+        <segue reference="iZh-cd-HDd"/>
     </inferredMetricsTieBreakers>
 </document>
